--- a/style.css
+++ b/style.css
@@ -3,3 +3,40 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  text-align: center;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+nav{
+  text-align: center;
+}
+nav a{
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: aqua;
+}
+figcaption{
+  font-size: 10px;
+  text-align: center;
+}
+#featured-property p{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 800px;
+}
+#details {
+  display: block;
+  text-align: center; 
+}
+#details div {
+  background-color: red;
+  text-align: center; 
+  float: left;
+  width: 25%;
+}
